--- a/auto-export/dockerfile
+++ b/auto-export/dockerfile
@@ -21,15 +21,15 @@ RUN wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${G
     && mkdir ~/.cache \
     && mkdir -p ~/.config/godot \
     && mkdir -p ~/.local/share/godot/templates/${GODOT_VERSION}.stable \
-    && unzip Godot_v${GODOT_VERSION}-stable_linux_server.64.zip \
-    && mv Godot_v${GODOT_VERSION}-stable_linux_server.64 /usr/local/bin/godot \
+    && unzip Godot_v${GODOT_VERSION}-stable_linux_headless.64.zip \
+    && mv Godot_v${GODOT_VERSION}-stable_linux_headless.64 /usr/local/bin/godot \
     && unzip Godot_v${GODOT_VERSION}-stable_export_templates.tpz \
     && mv templates/* ~/.local/share/godot/templates/${GODOT_VERSION}.stable \
-    && rm -f Godot_v${GODOT_VERSION}-stable_export_templates.tpz Godot_v${GODOT_VERSION}-stable_linux_server.64.zip
+    && rm -f Godot_v${GODOT_VERSION}-stable_export_templates.tpz Godot_v${GODOT_VERSION}-stable_linux_headless.64.zip
 
 # Make directory to run the app from
 RUN mkdir /godotapp
 WORKDIR /godotapp
 RUN git clone ${HTTPS_GIT_REPO} .
-RUN godot --path . --export "pck" ${GODOT_GAME_NAME}.pck
+RUN godot --path . --export-pack "Linux/X11" ${GODOT_GAME_NAME}.pck
 CMD godot --main-pack ${GODOT_GAME_NAME}.pck
