--- a/manual-export/dockerfile
+++ b/manual-export/dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:latest
 
-# Variables
-ENV GODOT_VERSION "3.2.3"
-ENV GODOT_GAME_NAME ""
+# Environment Variables
+ENV GODOT_VERSION "3.2.3" # Version of Godot to download
+ENV GODOT_GAME_NAME "" # Name of the PCK file you want to run on the server
 ENV HTTPS_GIT_REPO ""
 
 # Updates and installs
@@ -15,7 +15,7 @@ RUN apk add --no-cache git
 RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-2.31-r0.apk
 RUN apk add --allow-untrusted glibc-2.31-r0.apk
 
-# Download Godot, version is set from variables
+# Download Godot, version is set from environment variables
 RUN wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${GODOT_VERSION}-stable_linux_server.64.zip \
     && mkdir ~/.cache \
     && mkdir -p ~/.config/godot \
@@ -23,7 +23,7 @@ RUN wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${G
     && mv Godot_v${GODOT_VERSION}-stable_linux_server.64 /usr/local/bin/godot \
     && rm -f Godot_v${GODOT_VERSION}-stable_linux_server.64.zip
 
-# Make directory to run the app from
+# Make directory to run the app from and then run the app
 RUN mkdir /godotapp
 WORKDIR /godotapp
 RUN git clone ${HTTPS_GIT_REPO} .
